blog: content  tweak

--- a/src/blog/announcing-cushy-text.mdx
+++ b/src/blog/announcing-cushy-text.mdx
@@ -30,8 +30,8 @@ by studying and using them.
 There's always been something missing, though: a theme that lets me do _all_ of that in 
 a cohesive way with unified search that doesn't feel all duct-taped together. I wanted
 to be able to generate docs from many small collections of markdown files, run multiple
-blog instances with independent archives, build content and landing pages and have 
-interactive features that take advantage of Deno & Deno Deploy ready to use.
+blog instances, build content and landing pages and have interactive features that take 
+advantage of Deno, Deno Deploy & Lume 3's Router.
 
 <img class="blog_image" 
   src="/uploads/announcing-cushy-text.jpg" 
