docs: tone down index

--- a/src/docs/index.mdx
+++ b/src/docs/index.mdx
@@ -4,20 +4,15 @@ menu:
   visible: true
   order: 0
 ---
+# Status: <span class="text--danger">Incomplete & Unstable.</span>
 
-# Current Status: <span class="text--danger">Alpha & Unstable.</span>
+_I'm building the site about Cushy Text with Cushy Text while I build Cushy 
+Text. That's so ... meta._ 
 
-I'm building the site about Cushy Text with Cushy Text while I build Cushy 
-Text. That's so ... meta. I'm doing my best to keep this documentation up-to-date
-as I go from one breaking change to another. 
+I'm doing my best to keep this documentation up-to-date as I go from one breaking 
+change to another. 
 
 ## Installing
-
-<span class="text--danger">
-  <strong>
-    This is not yet ready for any kind of serious use. Expect breaking changes daily.
-  </strong>
-</span>
 
 For now: [just clone the repo](https://github.com/timthepost/cushytext).
 
