docs: add note about finalizing sidebars to immediate to-do list

--- a/src/docs/index.mdx
+++ b/src/docs/index.mdx
@@ -60,6 +60,11 @@ the second task will first run the first, and then also remove `node_modules`.
 
  - Docs auto nav doesn't deal with nested directories very well.
 
+ - Blog & Docs sidebars don't collapse as well as they should: there should be 
+   a TOC at the top of the post on small screens, with the one in the sidebar hidden
+   (for both blogs and docs). Also make sure the rest of the stuff that ends up at 
+   the bottom is necessary on small screens and use a media query to hide some of it.
+
  - A long list of additional plugins, like the OG Image Generator, need 
    installed, configured, tested and tweaked.
 
