--- a/src/blog/announcing-cushy-text.mdx
+++ b/src/blog/announcing-cushy-text.mdx
@@ -46,36 +46,53 @@ So, I created one! And, I named it Cushy Text!
 
 The theme allows you to run multiple independent blogs with the ability to separate
 tags out from between them, but all sharing a common archive and author page. This
-is accomplished by adding a hidden "archetype" tag (my term) in the `_data.*` file 
-in the folder where you want it to live, an example from this blog:
+is accomplished through directory-level configuration and the use of special keys 
+I call waypoints. Let's look at the `_data.yml` from [this site's blog instance](/blog/):
 
 ```yml
 layout: layouts/post.vto
-tags:
-  - "%blog%"
+waypoint: "%blog%"
+tags: []
 blog:
   basedir: /blog/
-  archetypeTag: "%blog%"
   title: Cushy Text Blog
-  sidebar: auto
   recent: 5
 ```
 
-And, depending on how noisy you like your `plugins.ts` file, you can even run
-independent feeds. Because of the `%blog%` tag, which never gets displayed, 
-you can easily scope posts _just_ from this blog. If I had another blog in 
-`/blog2/`, with a similar file, but adding `%blog2%` as the tag, then it's 
-easy to exclude or include either.
+This (among setting some base values) tells every page what layout to use, and 
+to assign itself a key called a `waypoint` that is used behind the scenes to 
+scope, include or exclude each blog or documentation instance from search,
+navigation, feeds and more. 
 
-This works for every directory, and is being built into the tag helper components
-so it's easy to keep straight.
+To control how feeds work, see `plugins.ts`:
 
-But blogs are only one content archetype that Cushy Text supports, it also supports
-multi-instance documentation folders, similar to wiki themes, as well as MDX powered
-content and landing pages. 
+```js
+  site.use(feed({ output: ["/feed.xml"], query: "waypoint=%blog%" }))
+  site.use(feed({ output: ["/feed.json"], query: "waypoint=%blog%" }))
+```
 
-All of these under Infima CSS, one of the most versatile CSS frameworks for text-heavy
-static websites, with centralized search powered by Pagefind and Lume 3 middleware.
+As long as each separate blog and documentation folder has a unique waypoint,
+you can build navigation and search any way you like!
+
+Speaking of documentation ..
+
+## Basic Docs/Wiki Archetype Built-In!
+
+You can [drop a bunch of markdown in a folder](/docs/), and add this `_data.yml` at the 
+top level:
+
+```yml
+layout: layouts/docs.vto
+waypoint: "%docs%"
+docs:
+  basedir: /docs/
+  title: Documentation Home
+  sidebar: auto
+```
+
+Think of it like a very light version of a blog that generates its own sidebar based on 
+the directory. It will soon support custom sidebars and more complex nesting. I really
+like using one theme for everything, in a way that feels planned instead of bolted together.
 
 ## Interactive Features Included
 
