docs: clarity for archetypes

--- a/src/docs/archetypes.mdx
+++ b/src/docs/archetypes.mdx
@@ -1,11 +1,11 @@
 ---
-title: Data Files & Special Hidden Tags
+title: Waypoints & Folder Data Files
 menu:
   visible: true
   order: 1
 ---
 
-# What Are Archetypes?
+# What Are Lume Archetypes?
 
 In Lume, _archetypes_ are scripts that Lume runs which can create base 
 content for blog posts, content pages, photo galleries, or whatever other
