--- a/src/blog/announcing-cushy-text.mdx
+++ b/src/blog/announcing-cushy-text.mdx
@@ -134,7 +134,7 @@ anywhere.
 In all honesty it's splitting hairs, because it's only a few hundred lines of CSS and JS
 combined, but _its the point, darn it!_
 
-## Loaded Like A Baked Potato With plugins
+## Loaded Like A Baked Potato With Plugins
 
 Apologies if you don't like potatoes. Cushy Text aims to ship with pre-configured plugins 
 covering SEO, Content Optimization, Feeds, Engagement and More. The idea is to help you 
