Forgot to say the magic word. Err, key.

--- a/src/blog/welcome-wordpress.mdx
+++ b/src/blog/welcome-wordpress.mdx
@@ -3,6 +3,9 @@ title: I Welcome WordPress Users To Hybrid Static Sites!
 date: '2025-03-09'
 author: Tim Post
 draft: false
+menu:
+  visible: true
+  order: 0
 tags:
   - opinion
   - wordpress
