--- a/src/blog/welcome-wordpress.mdx
+++ b/src/blog/welcome-wordpress.mdx
@@ -1,5 +1,5 @@
 ---
-title: I Welcome WordPress Users To Hybrid Static Sites!
+title: I Encourage WordPress Users To Try Hybrid Static Sites!
 date: '2025-03-09'
 author: Tim Post
 draft: false
