--- a/src/docs/conductor-plugin.mdx
+++ b/src/docs/conductor-plugin.mdx
@@ -11,8 +11,12 @@ The _conductor_ plugin is a plugin that does little things to make
 the theme work nicely, but things that are also a little too small
 to warrant their own plugin.
 
+***The theme will not work properly if this plugin is removed.***
+
 For instance, it generates the table of contents for both the Blog
 and Documentation archetypes through an event that runs at pre-render.
+It also handles handing off and validating data between functional 
+parts of the site.
 
 ## Options
 
@@ -37,9 +41,29 @@ export const defaults: Options = {
 };
 ```
 
+And, here's how it's loaded in the theme:
+
+```js
+  .use(conductor({
+    // Container where the TOC is deposited once generated
+    toc_selector: "#toc",
+    // Content within this container is scanned for headings
+    toc_container: ".toc-enabled",
+    // Headings to scan for and extract / anchor 
+    toc_heading_selectors: "h2, h3, h4, h5, h6",
+    // class to apply to generated TOC links
+    toc_link_class: "table-of-contents__link",
+    // class to apply to generated TOC list
+    toc_list_class: "table-of-contents padding-top--none",
+  }))
+```
+## Data Preprocessing
+
+Right now, the plugin examines the `author` key, transforms spaces to dashes, 
+and then saves it as `safe_author` so it's easy to use without constantly 
+calling `.replace()` in templates.
+
 ## Roadmap
 
-This will likely also create JSON data that other features need, or 
-do things like update a back-end report for the content rating plugins, 
-or things like that. Not really a kitchen sink plugin, but just something
-that keeps things running smoothly.
+Anything that needs to be done through an event or on startup to make the theme
+function properly can go in the conductor, that's what it's here for. 
