Add CTA closing to post

--- a/src/blog/welcome-wordpress.mdx
+++ b/src/blog/welcome-wordpress.mdx
@@ -110,3 +110,16 @@ who are essentially just providing that.
 
 I hope it's at least part of the vision going forward, anyway. 
 
+## Challenge Yourself To Try Just Part Of The Process?
+
+Export your blog and [generate some markdown](https://github.com/lonekorean/wordpress-export-to-markdown).
+
+[Use this template](https://github.com/lumeland/theme-boilerplate) to bootstrap a
+very minimal Lume site. Put your generated markdown inside the `src/` folder, run 
+`deno task serve`, and start getting an idea of what it would take. 
+
+You'll find that the community is really helpful to people who just want to do 
+things in a better way. Having a successful site without the excess baggage of 
+excessive energy, complexity and cost is always a better option than not.
+
+If you need help, find me in Discord.
