blog: sort out tags

--- a/src/blog/interactive-feature-plans.mdx
+++ b/src/blog/interactive-feature-plans.mdx
@@ -7,7 +7,7 @@ layout: layouts/post.vto
 menu:
   visible: true
 tags:
-  - announcements
+  - updates
   - interactive-features
   - v0.0.1
 metas:
