content & documentation updates

--- a/src/blog/announcing-cushy-text.mdx
+++ b/src/blog/announcing-cushy-text.mdx
@@ -202,7 +202,9 @@ spend time writing and curating, not configuring plugins, unless you wanna.
 
 I'm including my own SEO plugin that does static analysis checks of pages to make sure
 things like lengths, common word densities, meta info and everything else is set as 
-optimally as possible. 
+optimally as possible.
+
+I mean really, [check out all these toppings](/docs/#plugin-status)!
 
 ## Responsive And Accessible
 
