--- a/src/docs/index.mdx
+++ b/src/docs/index.mdx
@@ -120,7 +120,7 @@ installed and enabled because they can hide subtle development issues. To keep t
 of all that are installed, and all that still need to be enabled, I've created the 
 following table:
 
-### List & Status Of All Planned Plugins:
+<h3 id="plugin-status">List & Status Of All Planned Plugins:</h3>
 
 | Plugin | Description | Type | Author | Installed? | Configured? |
 |:-:|:-:|:-:|:-:|:-:|:-:|
